add get request in draft asset resource
